--- a/.github/workflows/projectbuild.yml
+++ b/.github/workflows/projectbuild.yml
@@ -4,8 +4,8 @@ on: [push]
 
 jobs:
   build:
-    runs-on: self-hosted
-    timeout-minutes: 3
+    runs-on: macos-latest
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v3
